--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,236 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-<!--    <LinearLayout-->
-<!--        android:orientation="vertical"-->
-<!--        android:background="@drawable/bg"-->
-<!--        android:weightSum="10"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="130dp"
+        android:layout_height="200dp"
+        android:onClick="onClickPurchase"
+        android:text="Purchase"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="130dp"
+        android:layout_height="200dp"
+        android:text="Raw Material Entry"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="130dp"
+        android:layout_height="200dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
-<!--        <TextView-->
-<!--            android:id="@+id/firebasename"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_marginStart="5dp"-->
-<!--            android:layout_marginTop="28dp"-->
-<!--            android:layout_marginBottom="60dp"-->
-<!--            android:text="Welcome,"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textColor="#F57C00"-->
-<!--            android:textSize="40sp" />-->
-
-
-
-
-
-<!--        <GridLayout-->
-<!--            android:id="@+id/mainGrid"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="13dp"-->
-<!--            android:layout_weight="8"-->
-<!--            android:alignmentMode="alignMargins"-->
-<!--            android:columnCount="2"-->
-<!--            android:columnOrderPreserved="false"-->
-<!--            android:padding="14dp"-->
-<!--            android:rowCount="2">-->
-
-<!--            &lt;!&ndash; Row 1 &ndash;&gt;-->
-
-<!--            &lt;!&ndash; Column 1 &ndash;&gt;-->
-
-<!--            &lt;!&ndash; Column 2 &ndash;&gt;-->
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/addItems"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:layout_row="0"-->
-<!--                android:layout_rowWeight="1"-->
-<!--                android:layout_column="0"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginLeft="16dp"-->
-<!--                android:layout_marginRight="16dp"-->
-<!--                android:layout_marginBottom="16dp"-->
-<!--                app:cardCornerRadius="8dp"-->
-<!--                app:cardElevation="8dp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:layout_margin="16dp"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <ImageView-->
-
-<!--                        android:layout_width="85dp"-->
-<!--                        android:layout_height="85dp"-->
-<!--                        android:background="@drawable/circlebackgroundpurple"-->
-<!--                        android:src="@drawable/ic_add_black_add" />-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:text="Add Product"-->
-<!--                        android:textSize="17dp"-->
-<!--                        android:textStyle="bold" />-->
-
-
-<!--                </LinearLayout>-->
-
-<!--            </androidx.cardview.widget.CardView>-->
-
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/deleteItems"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:layout_rowWeight="1"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginLeft="16dp"-->
-<!--                android:layout_marginRight="16dp"-->
-<!--                android:layout_marginBottom="16dp"-->
-<!--                app:cardCornerRadius="8dp"-->
-<!--                app:cardElevation="8dp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_horizontal|center_vertical"-->
-<!--                    android:layout_margin="16dp"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <ImageView-->
-
-<!--                        android:layout_width="85dp"-->
-<!--                        android:layout_height="85dp"-->
-<!--                        android:padding="10dp"-->
-<!--                        android:layout_marginLeft="11dp"-->
-<!--                        android:background="@drawable/circlebackgroundyellow"-->
-<!--                        android:src="@drawable/ic_delete_black_24dp"/>-->
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:textStyle="bold"-->
-<!--                        android:text="Delete Product"-->
-<!--                        android:textSize="17dp"-->
-<!--                        />-->
-
-
-<!--                </LinearLayout>-->
-
-<!--            </androidx.cardview.widget.CardView>-->
-
-
-<!--            &lt;!&ndash; Row 2 &ndash;&gt;-->
-
-<!--            &lt;!&ndash; Column 1 &ndash;&gt;-->
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/scanItems"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:layout_rowWeight="1"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginLeft="16dp"-->
-<!--                android:layout_marginRight="16dp"-->
-<!--                android:layout_marginBottom="16dp"-->
-<!--                app:cardCornerRadius="8dp"-->
-<!--                app:cardElevation="8dp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_horizontal|center_vertical"-->
-<!--                    android:layout_margin="16dp"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <ImageView-->
-
-<!--                        android:layout_width="85dp"-->
-<!--                        android:layout_height="85dp"-->
-<!--                        android:background="@drawable/circlebackgroundpink"-->
-<!--                        android:src="@drawable/ic_find_replace_black_24dp"/>-->
-
-<!--                    <TextView-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:textStyle="bold"-->
-<!--                        android:text="View Product"-->
-<!--                        android:textSize="17dp"/>-->
-
-
-<!--                </LinearLayout>-->
-
-<!--            </androidx.cardview.widget.CardView>-->
-
-<!--            &lt;!&ndash; Column 2 &ndash;&gt;-->
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/viewInventory"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:layout_rowWeight="1"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginLeft="16dp"-->
-<!--                android:layout_marginRight="16dp"-->
-<!--                android:layout_marginBottom="16dp"-->
-<!--                app:cardCornerRadius="8dp"-->
-<!--                app:cardElevation="8dp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_horizontal|center_vertical"-->
-<!--                    android:layout_margin="16dp"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:textStyle="bold"-->
-<!--                        android:text="View Inventory"-->
-<!--                        android:textSize="17dp"/>-->
-
-
-
-<!--                </LinearLayout>-->
-
-<!--            </androidx.cardview.widget.CardView>-->
-
-<!--            <ImageView-->
-
-<!--                android:layout_width="74dp"-->
-<!--                android:layout_height="85dp"-->
-<!--                android:layout_row="0"-->
-<!--                android:layout_column="3"-->
-<!--                android:layout_marginLeft="14dp"-->
-<!--                android:background="@drawable/circlbackgroundgreen"-->
-<!--                android:src="@drawable/ic_attach_money_black_24dp"-->
-<!--                tools:ignore="GridLayout"-->
-<!--                android:contentDescription="TODO" />-->
-
-
-<!--            &lt;!&ndash; Row 2 &ndash;&gt;-->
-
-<!--            &lt;!&ndash; Column 1 &ndash;&gt;-->
-
-<!--            &lt;!&ndash; Column 2 &ndash;&gt;-->
-
-<!--        </GridLayout>-->
-
-<!--    </LinearLayout>-->
-
-</LinearLayout>
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="130dp"
+        android:layout_height="200dp"
+        android:text="Track Order"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+</androidx.constraintlayout.widget.ConstraintLayout>
